--- a/esp32c3-hal/Cargo.toml
+++ b/esp32c3-hal/Cargo.toml
@@ -27,20 +27,20 @@ categories = [
 [dependencies]
 cfg-if         = "1.0.0"
 esp-hal-common = { version = "0.13.0", features = ["esp32c3"], path = "../esp-hal-common" }
-embassy-time   = { version = "0.1.5",  features = ["nightly"], optional = true }
+embassy-time   = { version = "0.2.0", optional = true }
 
 [dev-dependencies]
 aes                = "0.8.3"
 critical-section   = "1.1.2"
 crypto-bigint      = { version = "0.5.3", default-features = false }
-embassy-executor   = { version = "0.3.2", features = ["nightly"] }
+embassy-executor   = { version = "0.4.0", features = ["nightly"] }
 embedded-can       = "0.4.1"
 embedded-graphics  = "0.8.1"
 embedded-hal       = { version = "0.2.7", features = ["unproven"] }
-embedded-hal-1     = { version = "=1.0.0-rc.1", package = "embedded-hal" }
-embedded-hal-async = "=1.0.0-rc.1"
+embedded-hal-1     = { version = "=1.0.0-rc.2", package = "embedded-hal" }
+embedded-hal-async = "=1.0.0-rc.2"
 embedded-io-async  = "0.6.0"
-embedded-hal-bus   = "0.1.0-rc.1"
+embedded-hal-bus   = "0.1.0-rc.2"
 esp-backtrace      = { version = "0.9.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] }
 esp-hal-smartled   = { version = "0.6.0", features = ["esp32c3"], path = "../esp-hal-smartled" }
 esp-println        = { version = "0.7.0", features = ["esp32c3"] }
@@ -51,7 +51,7 @@ sha2               = { version = "0.10.8", default-features = false }
 smart-leds         = "0.3.0"
 ssd1306            = "0.8.4"
 static_cell        = { version = "2.0.0", features = ["nightly"] }
-embassy-sync       = "0.4.0"
+embassy-sync       = "0.5.0"
 
 [features]
 default              = ["rt", "vectored", "zero-rtc-bss", "embassy-integrated-timers"]
