--- a/esp32s3-hal/Cargo.toml
+++ b/esp32s3-hal/Cargo.toml
@@ -26,22 +26,22 @@ categories = [
 
 [dependencies]
 esp-hal-common = { version = "0.13.0", features = ["esp32s3"], path = "../esp-hal-common" }
-embassy-time   = { version = "0.1.5",  features = ["nightly"], optional = true }
+embassy-time   = { version = "0.2.0", optional = true }
 r0             = { version = "1.0.0",  optional = true }
 
 [dev-dependencies]
 aes                = "0.8.3"
 critical-section   = "1.1.2"
 crypto-bigint      = { version = "0.5.3", default-features = false }
-embassy-executor   = { version = "0.3.2", features = ["nightly"] }
-embassy-sync       = "0.4.0"
+embassy-executor   = { version = "0.4.0", features = ["nightly"] }
+embassy-sync       = "0.5.0"
 embedded-graphics  = "0.8.1"
 embedded-hal       = { version = "0.2.7",  features = ["unproven"] }
-embedded-hal-1     = { version = "=1.0.0-rc.1", package = "embedded-hal" }
-embedded-hal-async = "=1.0.0-rc.1"
+embedded-hal-1     = { version = "=1.0.0-rc.2", package = "embedded-hal" }
+embedded-hal-async = "=1.0.0-rc.2"
 embedded-can       = "0.4.1"
 embedded-io-async  = "0.6.0"
-embedded-hal-bus   = "0.1.0-rc.1"
+embedded-hal-bus   = "0.1.0-rc.2"
 esp-alloc          = "0.3.0"
 esp-backtrace      = { version = "0.9.0", features = ["esp32s3", "panic-handler", "exception-handler", "print-uart"] }
 esp-hal-smartled   = { version = "0.6.0", features = ["esp32s3"], path = "../esp-hal-smartled" }
