--- a/esp-hal-common/Cargo.toml
+++ b/esp-hal-common/Cargo.toml
@@ -1,10 +1,6 @@
 [package]
-name    = "esp-hal-common"
-version = "0.13.1"
-authors = [
-    "Jesse Braham <jesse@beta7.io>",
-    "Björn Quentin <bjoern.quentin@mobile-j.de>",
-]
+name         = "esp-hal-common"
+version      = "0.14.0"
 edition      = "2021"
 rust-version = "1.67.0"
 description  = "HAL implementations for peripherals common among Espressif devices; should not be used directly"
@@ -33,12 +29,12 @@ embedded-io          = { version = "0.6.1", optional = true }
 enumset              = "1.1.3"
 esp-synopsys-usb-otg = { version = "0.4.0", optional = true, features = ["fs", "esp32sx"] }
 fugit                = "0.3.7"
-heapless             = "0.8"
+heapless             = "0.8.0"
 log                  = { version = "0.4.20", optional = true }
 nb                   = "1.1.0"
 paste                = "1.0.14"
-portable-atomic      = { version = "1.5.1", default-features = false }
-procmacros           = { version = "0.7.0", features = ["enum-dispatch", "ram"], package = "esp-hal-procmacros", path = "../esp-hal-procmacros" }
+portable-atomic      = { version = "1.6.0", default-features = false }
+procmacros           = { version = "0.8.0", features = ["enum-dispatch", "ram"], package = "esp-hal-procmacros", path = "../esp-hal-procmacros" }
 strum                = { version = "0.25.0", default-features = false, features = ["derive"] }
 void                 = { version = "1.0.2", default-features = false }
 usb-device           = { version = "0.3.1", optional = true }
@@ -52,7 +48,7 @@ embassy-sync       = { version = "0.5.0", optional = true }
 embassy-time       = { version = "0.2.0", optional = true }
 
 # RISC-V
-esp-riscv-rt = { version = "0.5.0", optional = true, path = "../esp-riscv-rt" }
+esp-riscv-rt = { version = "0.6.0", optional = true, path = "../esp-riscv-rt" }
 
 # Xtensa
 xtensa-lx    = { version = "0.8.0",  optional = true }
@@ -67,7 +63,7 @@ ufmt-write = { version = "0.1.0", optional = true }
 esp32   = { version = "0.28.0", features = ["critical-section"], optional = true }
 esp32c2 = { version = "0.16.0", features = ["critical-section"], optional = true }
 esp32c3 = { version = "0.19.0", features = ["critical-section"], optional = true }
-esp32c6 = { version = "0.10.0",  features = ["critical-section"], optional = true }
+esp32c6 = { version = "0.10.0", features = ["critical-section"], optional = true }
 esp32h2 = { version = "0.6.0",  features = ["critical-section"], optional = true }
 esp32s2 = { version = "0.19.0", features = ["critical-section"], optional = true }
 esp32s3 = { version = "0.23.0", features = ["critical-section"], optional = true }
@@ -89,7 +85,7 @@ esp32s3 = ["xtensa", "esp32s3/rt", "procmacros/esp32s3", "xtensa-lx/esp32s3", "x
 xtal-26mhz = []
 xtal-40mhz = []
 
-# Only certain chips support flip-link
+# Only certain chips support flip-link (ESP32-C6 and ESPS32-H2)
 flip-link = ["esp-riscv-rt/fix-sp"]
 
 # PSRAM support
@@ -98,9 +94,9 @@ psram-4m = []
 psram-8m = []
 
 # Octal RAM support
-opsram-2m = []
-opsram-4m = []
-opsram-8m = []
+opsram-2m  = []
+opsram-4m  = []
+opsram-8m  = []
 opsram-16m = []
 
 # USB OTG support (ESP32-S2 and ESP32-S3 only! Enabled by default)
@@ -145,7 +141,7 @@ embassy-executor-thread    = ["embassy", "embassy-executor"]
 embassy-time-systick = []
 embassy-time-timg0   = []
 
-# prefer integrated timers, but allow using the generic queue if needed
+# Prefer integrated timers, but allow using the generic queue if needed
 embassy-integrated-timers = ["embassy-executor?/integrated-timers"]
 embassy-generic-queue-8   = ["embassy-time/generic-queue-8"]
 embassy-generic-queue-16  = ["embassy-time/generic-queue-16"]
