--- a/esp32s2-hal/Cargo.toml
+++ b/esp32s2-hal/Cargo.toml
@@ -1,10 +1,6 @@
 [package]
-name    = "esp32s2-hal"
-version = "0.13.0"
-authors = [
-    "Jesse Braham <jesse@beta7.io>",
-    "Björn Quentin <bjoern.quentin@mobile-j.de>",
-]
+name         = "esp32s2-hal"
+version      = "0.14.0"
 edition      = "2021"
 rust-version = "1.67.0"
 description  = "HAL for ESP32-S2 microcontrollers"
@@ -25,28 +21,28 @@ categories = [
 ]
 
 [dependencies]
-esp-hal-common               = { version = "0.13.0", features = ["esp32s2"], path = "../esp-hal-common" }
-embassy-time                 = { version = "0.2.0", optional = true }
+esp-hal-common = { version = "0.14.0", features = ["esp32s2"], path = "../esp-hal-common" }
+embassy-time   = { version = "0.2.0", optional = true }
 
 [dev-dependencies]
 aes                = "0.8.3"
 critical-section   = "1.1.2"
-crypto-bigint      = { version = "0.5.3", default-features = false }
+crypto-bigint      = { version = "0.5.5", default-features = false }
 embassy-executor   = { version = "0.4.0", features = ["nightly"] }
 embassy-sync       = "0.5.0"
 embedded-graphics  = "0.8.1"
 embedded-hal-1     = { version = "=1.0.0-rc.2", package = "embedded-hal" }
 embedded-hal-async = "=1.0.0-rc.2"
-embedded-io-async  = "0.6.0"
+embedded-io-async  = "0.6.1"
 embedded-hal-bus   = "0.1.0-rc.2"
 esp-alloc          = "0.3.0"
 esp-backtrace      = { version = "0.9.0", features = ["esp32s2", "panic-handler", "print-uart", "exception-handler"] }
-esp-hal-smartled   = { version = "0.6.0", features = ["esp32s2"], path = "../esp-hal-smartled" }
-esp-println        = { version = "0.7.0", features = ["esp32s2"] }
-heapless           = { version = "0.8", features = ["portable-atomic"] }
-# xtensa targets are not auto detected to need atomic emulation in the futures-* crates.
-# see https://github.com/rust-lang/futures-rs/pull/2805 as to how to remove this dep for good
-futures-util = { version = "0.3.17", default-features = false, features = ["portable-atomic"] }
+esp-hal-smartled   = { version = "0.7.0", features = ["esp32s2"], path = "../esp-hal-smartled" }
+esp-println        = { version = "0.7.1", features = ["esp32s2"] }
+# Xtensa targets are not auto detected to need atomic emulation in the futures-* crates.
+# As for how to remove this dep for good, see: https://github.com/rust-lang/futures-rs/pull/2805
+futures-util       = { version = "0.3.17", default-features = false, features = ["portable-atomic"] }
+heapless           = { version = "0.8.0", features = ["portable-atomic"] }
 hmac               = { version = "0.12.1", default-features = false }
 lis3dh-async       = "0.8.0"
 sha2               = { version = "0.10.8", default-features = false }
@@ -68,7 +64,7 @@ ufmt      = ["esp-hal-common/ufmt"]
 vectored  = ["esp-hal-common/vectored"]
 
 # Embassy support
-embassy = ["esp-hal-common/embassy"]
+embassy                    = ["esp-hal-common/embassy"]
 embassy-time-systick       = ["esp-hal-common/embassy-time-systick", "embassy-time/tick-hz-80_000_000"] 
 embassy-time-timg0         = ["esp-hal-common/embassy-time-timg0", "embassy-time/tick-hz-1_000_000"]
 embassy-executor-interrupt = ["esp-hal-common/embassy-executor-interrupt"]
@@ -83,10 +79,10 @@ embassy-generic-queue-64  = ["esp-hal-common/embassy-generic-queue-64"]
 embassy-generic-queue-128 = ["esp-hal-common/embassy-generic-queue-128"]
 
 # PSRAM support
-psram     = []
-psram-2m  = ["esp-hal-common/psram-2m", "psram"]
-psram-4m  = ["esp-hal-common/psram-4m", "psram"]
-psram-8m  = ["esp-hal-common/psram-8m", "psram"]
+psram    = []
+psram-2m = ["esp-hal-common/psram-2m", "psram"]
+psram-4m = ["esp-hal-common/psram-4m", "psram"]
+psram-8m = ["esp-hal-common/psram-8m", "psram"]
 
 [profile.release]
 debug = true
