--- a/esp32s2-hal/Cargo.toml
+++ b/esp32s2-hal/Cargo.toml
@@ -51,30 +51,57 @@ usb-device         = "0.3.1"
 usbd-serial        = "0.2.0"
 
 [features]
-default     = ["rt", "vectored", "embassy-integrated-timers"]
-async       = ["esp-hal-common/async"]
-debug       = ["esp-hal-common/debug"]
-defmt       = ["esp-hal-common/defmt", "esp-println/defmt-espflash"]
-eh1         = ["esp-hal-common/eh1"]
+default = ["embassy-integrated-timers", "rt", "vectored"]
+
+## Enable debug features in the HAL (used for development).
+debug = ["esp-hal-common/debug"]
+## Enable logging output using the `log` crate.
+log = ["esp-hal-common/log", "esp-println/log"]
+## Enable runtime support.
+rt = ["esp-hal-common/rt-xtensa"]
+## Enable interrupt vectoring.
+vectored = ["esp-hal-common/vectored"]
+
+#! ### Trait Implementation Feature Flags
+## Enable support for asynchronous operation, with interfaces provided by
+## `embedded-hal-async` and `embedded-io-async`.
+async = ["esp-hal-common/async"]
+## Implement `defmt::Format` on certain types.
+defmt = ["esp-hal-common/defmt", "esp-println/defmt-espflash"]
+## Implement the traits defined in the `1.0.0` releases of `embedded-hal` and
+## `embedded-hal-nb` for the relevant peripherals.
+eh1 = ["esp-hal-common/eh1"]
+## Implement the traits defined in `embedded-io` for certain peripherals.
 embedded-io = ["esp-hal-common/embedded-io"]
-log         = ["esp-hal-common/log", "esp-println/log"]
-rt          = ["esp-hal-common/rt-xtensa"]
-ufmt        = ["esp-hal-common/ufmt"]
-vectored    = ["esp-hal-common/vectored"]
+## Implement the `ufmt_write::uWrite` trait for certain peripherals.
+ufmt = ["esp-hal-common/ufmt"]
 
-# Embassy support
-embassy                    = ["esp-hal-common/embassy"]
-embassy-executor-interrupt = ["esp-hal-common/embassy-executor-interrupt"]
-embassy-executor-thread    = ["esp-hal-common/embassy-executor-thread"]
-embassy-integrated-timers  = ["esp-hal-common/embassy-integrated-timers"]
-embassy-time-systick       = ["esp-hal-common/embassy-time-systick", "embassy-time/tick-hz-80_000_000"] 
-embassy-time-timg0         = ["esp-hal-common/embassy-time-timg0", "embassy-time/tick-hz-1_000_000"]
-
-# PSRAM support
-psram    = []
+#! ### PSRAM Feature Flags
+psram = []
+## Use externally connected PSRAM (2MB).
 psram-2m = ["esp-hal-common/psram-2m", "psram"]
+## Use externally connected PSRAM (4MB).
 psram-4m = ["esp-hal-common/psram-4m", "psram"]
+## Use externally connected PSRAM (8MB).
 psram-8m = ["esp-hal-common/psram-8m", "psram"]
+
+#! ### Embassy Feature Flags
+## Enable support for `embassy`, a modern asynchronous embedded framework.
+embassy = ["esp-hal-common/embassy"]
+## Use the interrupt-mode embassy executor.
+embassy-executor-interrupt = ["esp-hal-common/embassy-executor-interrupt"]
+## Use the thread-mode embassy executor.
+embassy-executor-thread = ["esp-hal-common/embassy-executor-thread"]
+## Uses hardware timers as alarms for the executors. Using this feature
+## limits the number of executors to the number of hardware alarms provided
+## by the time driver.
+embassy-integrated-timers = ["esp-hal-common/embassy-integrated-timers"]
+## Enable the embassy time driver using the `SYSTIMER` peripheral. The
+## `SYSTIMER` peripheral has three alarams available for use.
+embassy-time-systick = ["esp-hal-common/embassy-time-systick", "embassy-time/tick-hz-16_000_000"]
+## Enable the embassy time driver using the `TIMG0` peripheral. The `TIMG0`
+## peripheral has two alarms available for use.
+embassy-time-timg0 = ["esp-hal-common/embassy-time-timg0", "embassy-time/tick-hz-1_000_000"]
 
 [profile.release]
 debug = true
